# Projeto-AED2

./: README.md  main.cpp
RPG v1.0/: README.md
RPG v1.1/: Character.cpp  Character.h  Prop.cpp  main.cpp  prop.h
RPG v1.2/: BaseCharacter.cpp  BaseCharacter.h  Character.cpp  Character.h  Enemy.cpp  Enemy.h  main.cpp
RPG v1.3/: BaseCharacter.cpp  BaseCharacter.h  Character.cpp  Enemy.cpp  Enemy.h  main.cpp
RPG v1.4/: BaseCharacter.cpp  Character.cpp  Character.h  Enemy.cpp  Prop.cpp  main.cpp
RPG v1.4 - Versão Final/: CMakeLists.txt  Inventory.cpp  Inventory.h  README.md  RPG.cbp
RPG v1.4 - Versão Final/include/: BaseCharacter.h  Character.h  prop.h
RPG v1.4 - Versão Final/lib/: BaseCharacter.cpp  Enemy.cpp
RPG v1.4 - Versão Final/src/: main.cpp
